force-app/main/default/objects/Entregable__c/Entregable__c.object-meta.xml
<CustomObject>
    <label>Grupo de Entregables</label>
    <nameField>
        <label>Nombre de Grupo de Entregables</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grupos de Entregables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>