force-app/main/default/objects/Entregable__c/fields/Avance_Contrac__c.field-meta.xml
<CustomField>
    <fullName>Avance_Contrac__c</fullName>
    <label>Avance Contractual</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>