force-app/main/default/objects/Entregable__c/fields/Avance_Producci_n__c.field-meta.xml
<CustomField>
    <fullName>Avance_Producci_n__c</fullName>
    <description>Nuevo campo tras quitar principal detalle</description>
    <label>Avance Producción</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>