force-app/main/default/objects/Entregable__c/fields/AvanceContractual__c.field-meta.xml
<CustomField>
    <fullName>AvanceContractual__c</fullName>
    <formula>Entregables_Aceptados__c / N_mero_Entregables__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Número de Subentregables Firmados / Total de Subentregables</inlineHelpText>
    <label>Avance Contractual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>