force-app/main/default/objects/Entregable__c/fields/AvanceTotal__c.field-meta.xml
<CustomField>
    <fullName>AvanceTotal__c</fullName>
    <formula>Avance_Producci_n__c * Hito__r.Peso_Facturacion__c * Peso_Entregable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Avance * Peso del hito de facturación en el total del contrato * Peso del entregable en el hito de facturación</inlineHelpText>
    <label>Avance Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>