force-app/main/default/objects/Entregable__c/fields/Descripcion_EDT__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_EDT__c</fullName>
    <label>Descripción EDT</label>
    <length>80</length>
    <type>Text</type>
</CustomField>