force-app/main/default/objects/Entregable__c/fields/Dias_Restantes_Firma__c.field-meta.xml
<CustomField>
    <fullName>Dias_Restantes_Firma__c</fullName>
    <formula>IF( Estado__c==&apos;Firmado&apos;, 0, Fecha_Limite_Firma__c - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días Restantes para Firma</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>