force-app/main/default/objects/Entregable__c/fields/Dias_Restantes_Liberacion__c.field-meta.xml
<CustomField>
    <fullName>Dias_Restantes_Liberacion__c</fullName>
    <formula>IF( Estado__c==&apos;Liberado&apos;|| Estado__c==&apos;Firmado&apos; , 0, Fecha_Limite_liberaci_n__c - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días Restantes Liberación</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>