force-app/main/default/objects/Entregable__c/fields/EDT__c.field-meta.xml
<CustomField>
    <fullName>EDT__c</fullName>
    <label>EDT</label>
    <length>80</length>
    <type>Text</type>
</CustomField>