force-app/main/default/objects/Entregable__c/fields/Entregable__c.field-meta.xml
<CustomField>
    <fullName>Entregable__c</fullName>
    <externalId>true</externalId>
    <label>Código Grupo de Entregables</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>