force-app/main/default/objects/Entregable__c/fields/Entregables_Aceptados__c.field-meta.xml
<CustomField>
    <fullName>Entregables_Aceptados__c</fullName>
    <description>Nuevo campo tras quitar principal detalle</description>
    <label>Entregables Aceptados</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>