force-app/main/default/objects/Entregable__c/fields/Entregables_liberados__c.field-meta.xml
<CustomField>
    <fullName>Entregables_liberados__c</fullName>
    <description>Nuevo campo tra quitar el maestro detalle</description>
    <label>Entregables liberados</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>