force-app/main/default/objects/Entregable__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <formula>IF(N_mero_Entregables__c == Entregables_liberados__c , &apos;Liberado&apos;, IF( N_mero_Entregables__c ==  Entregables_Aceptados__c, &apos;Firmado&apos;, &apos;Pendiente&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado OLD</label>
    <type>Text</type>
</CustomField>