force-app/main/default/objects/Entregable__c/fields/Fecha_Limite_Firma__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Limite_Firma__c</fullName>
    <description>Nuevo campo fecha firma con el dato antiguio</description>
    <label>Fecha Limite Firma</label>
    <type>Date</type>
</CustomField>