force-app/main/default/objects/Entregable__c/fields/Fecha_Limite_liberaci_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Limite_liberaci_n__c</fullName>
    <description>Nuevo campo FEcha Liberación con el dato anterior</description>
    <label>Fecha Limite liberación</label>
    <type>Date</type>
</CustomField>