force-app/main/default/objects/Entregable__c/fields/Hito_de_Facturacion__c.field-meta.xml
<CustomField>
    <fullName>Hito_de_Facturacion__c</fullName>
    <label>Hito de Facturación</label>
    <length>80</length>
    <type>Text</type>
</CustomField>