force-app/main/default/objects/Entregable__c/fields/Multa__c.field-meta.xml
<CustomField>
    <fullName>Multa__c</fullName>
    <label>Multa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>