force-app/main/default/objects/Entregable__c/fields/N_mero_Entregables__c.field-meta.xml
<CustomField>
    <fullName>N_mero_Entregables__c</fullName>
    <label>Número Entregables</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>