force-app/main/default/objects/Entregable__c/fields/Peso_Hito_Facturacion__c.field-meta.xml
<CustomField>
    <fullName>Peso_Hito_Facturacion__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Peso Hito Facturación</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>