force-app/main/default/objects/Entregable__c/fields/Pesos_Hitos_Entregables__c.field-meta.xml
<CustomField>
    <fullName>Pesos_Hitos_Entregables__c</fullName>
    <formula>IF( Suma_Pesos_Entregables__c =1 , 
IMAGE( $Setup.Semaforo__c.Semaforo_Verde__c , &quot;Verde&quot;,30,30), 
IMAGE($Setup.Semaforo__c.Semaforo_rojo__c, &quot;Rojo&quot;,30,30) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pesos Hitos Entregables</label>
    <type>Text</type>
</CustomField>