force-app/main/default/objects/Entregable__c/fields/Precio_base__c.field-meta.xml
<CustomField>
    <fullName>Precio_base__c</fullName>
    <label>Precio base</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>