force-app/main/default/objects/Entregable__c/fields/Soy_Responsable__c.field-meta.xml
<CustomField>
    <fullName>Soy_Responsable__c</fullName>
    <formula>Responsable__c =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Soy Responsable</label>
    <type>Checkbox</type>
</CustomField>