force-app/main/default/objects/Entregable__c/fields/Suma_Pesos_Entregables__c.field-meta.xml
<CustomField>
    <fullName>Suma_Pesos_Entregables__c</fullName>
    <description>Nuevo campo tras quitar principal detalle</description>
    <label>Suma Pesos Entregables</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>