force-app/main/default/objects/Entregable__c/recordTypes/Entregable.recordType-meta.xml
<RecordType>
    <fullName>Entregable</fullName>
    <active>true</active>
    <description>Se trata de un entregable principal, el cuál puede contener subentregables.</description>
    <label>Entregable</label>
</RecordType>