force-app/main/default/objects/Entregable__c/validationRules/Documentalista_Proyecto.validationRule-meta.xml
<ValidationRule>
    <fullName>Documentalista_Proyecto</fullName>
    <active>true</active>
    <description>Verifica que el documentalista del proyecto esté informado.</description>
    <errorConditionFormula>ISBLANK(Proyecto__r.Documentalista__c)</errorConditionFormula>
    <errorMessage>El proyecto asignado no tiene informado el Documentalista.</errorMessage>
</ValidationRule>