force-app/main/default/objects/Entregable__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Proyecto__c</columns>
    <columns>Fase__c</columns>
    <columns>Entregable__c</columns>
    <columns>NAME</columns>
    <columns>Estado__c</columns>
    <columns>Hito_de_Facturacion__c</columns>
    <columns>Peso_Hito_Facturacion__c</columns>
    <columns>Peso_Entregable__c</columns>
    <columns>AvanceContractual__c</columns>
    <columns>AvanceTotal__c</columns>
    <columns>Responsable__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los Grupos de Entregables</label>
</ListView>