force-app/main/default/objects/Entregable__c/listViews/Ciudad_de_la_Justicia_de_Alicante.listView-meta.xml
<ListView>
    <fullName>Ciudad_de_la_Justicia_de_Alicante</fullName>
    <columns>Fase__c</columns>
    <columns>Entregable__c</columns>
    <columns>NAME</columns>
    <columns>Hito__c</columns>
    <columns>Estado__c</columns>
    <columns>Peso_Hito_Facturacion__c</columns>
    <columns>Peso_Entregable__c</columns>
    <columns>AvanceContractual__c</columns>
    <columns>AvanceTotal__c</columns>
    <columns>Responsable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto__c</field>
        <operation>equals</operation>
        <value>Ciudad de la Justicia de Alicante</value>
    </filters>
    <label>Ciudad de la Justicia de Alicante</label>
    <sharedTo>
        <group>Ciudad_Justicia_Alicante</group>
    </sharedTo>
</ListView>