force-app/main/default/objects/Entregable__c/listViews/Gestion_de_la_Calidad_TIC.listView-meta.xml
<ListView>
    <fullName>Gestion_de_la_Calidad_TIC</fullName>
    <columns>Fase__c</columns>
    <columns>Entregable__c</columns>
    <columns>NAME</columns>
    <columns>Estado__c</columns>
    <columns>Hito__c</columns>
    <columns>Peso_Hito_Facturacion__c</columns>
    <columns>Peso_Entregable__c</columns>
    <columns>AvanceContractual__c</columns>
    <columns>AvanceTotal__c</columns>
    <columns>Responsable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto__c</field>
        <operation>equals</operation>
        <value>Gestión de la Calidad TIC</value>
    </filters>
    <label>Gestión de la Calidad TIC</label>
    <sharedTo>
        <group>Gestion_de_la_Calidad_TIC_Consultores</group>
    </sharedTo>
</ListView>