force-app/main/default/objects/Entregable__c/listViews/Gestion_educativa_CCAA_Madrid_RAICES.listView-meta.xml
<ListView>
    <fullName>Gestion_educativa_CCAA_Madrid_RAICES</fullName>
    <columns>Fase__c</columns>
    <columns>Entregable__c</columns>
    <columns>NAME</columns>
    <columns>Hito__c</columns>
    <columns>Estado__c</columns>
    <columns>Peso_Hito_Facturacion__c</columns>
    <columns>Peso_Entregable__c</columns>
    <columns>AvanceContractual__c</columns>
    <columns>AvanceTotal__c</columns>
    <columns>Responsable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto__c</field>
        <operation>equals</operation>
        <value>Gestión educativa CCAA Madrid. RAICES</value>
    </filters>
    <label>Gestión educativa CCAA Madrid. RAICES</label>
    <sharedTo></sharedTo>
</ListView>