force-app/main/default/objects/Entregable__c/listViews/ISU_Agua_de_Quito.listView-meta.xml
<ListView>
    <fullName>ISU_Agua_de_Quito</fullName>
    <columns>Fase__c</columns>
    <columns>Entregable__c</columns>
    <columns>NAME</columns>
    <columns>Hito__c</columns>
    <columns>Estado__c</columns>
    <columns>Peso_Hito_Facturacion__c</columns>
    <columns>Peso_Entregable__c</columns>
    <columns>AvanceContractual__c</columns>
    <columns>AvanceTotal__c</columns>
    <columns>Responsable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto__c</field>
        <operation>equals</operation>
        <value>ISU Agua de Quito</value>
    </filters>
    <label>ISU Agua de Quito</label>
    <sharedTo></sharedTo>
</ListView>