force-app/main/default/objects/Entregable__c/listViews/MINFIN_Ecuador.listView-meta.xml
<ListView>
    <fullName>MINFIN_Ecuador</fullName>
    <columns>Fase__c</columns>
    <columns>Entregable__c</columns>
    <columns>NAME</columns>
    <columns>Hito__c</columns>
    <columns>Estado__c</columns>
    <columns>Peso_Hito_Facturacion__c</columns>
    <columns>Peso_Entregable__c</columns>
    <columns>AvanceContractual__c</columns>
    <columns>AvanceTotal__c</columns>
    <columns>Responsable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto__c</field>
        <operation>equals</operation>
        <value>MINFIN Ecuador</value>
    </filters>
    <label>MINFIN Ecuador</label>
    <sharedTo>
        <group>MINFIN_Ecuador</group>
    </sharedTo>
</ListView>