force-app/main/default/objects/Entregable__c/listViews/SEDAPAL_SAP_PM.listView-meta.xml
<ListView>
    <fullName>SEDAPAL_SAP_PM</fullName>
    <columns>Fase__c</columns>
    <columns>Entregable__c</columns>
    <columns>NAME</columns>
    <columns>Hito__c</columns>
    <columns>Estado__c</columns>
    <columns>Peso_Hito_Facturacion__c</columns>
    <columns>Peso_Entregable__c</columns>
    <columns>AvanceContractual__c</columns>
    <columns>AvanceTotal__c</columns>
    <columns>Responsable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto__c</field>
        <operation>equals</operation>
        <value>SEDAPAL SAP PM</value>
    </filters>
    <label>SEDAPAL SAP PM</label>
    <sharedTo></sharedTo>
</ListView>